--- a/MovieDemo/View/MovieDetail/MovieDetail.storyboard
+++ b/MovieDemo/View/MovieDetail/MovieDetail.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n7q-xJ-YbA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n7q-xJ-YbA">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,22 +16,85 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CMB-tc-OHz">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" contentInsetAdjustmentBehavior="never" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CMB-tc-OHz">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ptz-4D-AZT">
+                                <rect key="frame" x="0.0" y="448" width="414" height="150"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gdV-sN-wO2">
+                                        <rect key="frame" x="186" y="9" width="42.5" height="132"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HEU-rO-ayD">
+                                                <rect key="frame" x="0.0" y="0.0" width="42.5" height="19.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xug-0p-Os8">
+                                                <rect key="frame" x="0.0" y="27.5" width="42.5" height="14.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M4l-ck-L4x">
+                                                <rect key="frame" x="0.0" y="50" width="42.5" height="14.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3wk-CD-Cfz">
+                                                <rect key="frame" x="0.0" y="72.5" width="42.5" height="14.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAG-ry-Jgh">
+                                                <rect key="frame" x="0.0" y="95" width="42.5" height="14.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0B-ao-cCu">
+                                                <rect key="frame" x="0.0" y="117.5" width="42.5" height="14.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" name="MainColor"/>
+                                <constraints>
+                                    <constraint firstItem="gdV-sN-wO2" firstAttribute="centerY" secondItem="Ptz-4D-AZT" secondAttribute="centerY" id="6Yv-BS-L9e"/>
+                                    <constraint firstItem="gdV-sN-wO2" firstAttribute="centerX" secondItem="Ptz-4D-AZT" secondAttribute="centerX" id="8kY-aR-T37"/>
+                                    <constraint firstAttribute="height" constant="150" id="qnu-7m-2MS"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="CMB-tc-OHz" firstAttribute="leading" secondItem="0MY-oo-jOz" secondAttribute="leading" id="5Zm-kh-o7v"/>
-                            <constraint firstItem="0MY-oo-jOz" firstAttribute="trailing" secondItem="CMB-tc-OHz" secondAttribute="trailing" id="5eM-t8-Hxx"/>
-                            <constraint firstItem="CMB-tc-OHz" firstAttribute="top" secondItem="0MY-oo-jOz" secondAttribute="top" id="Opz-OU-pdQ"/>
-                            <constraint firstItem="0MY-oo-jOz" firstAttribute="bottom" secondItem="CMB-tc-OHz" secondAttribute="bottom" id="X5g-zF-tbt"/>
+                            <constraint firstItem="CMB-tc-OHz" firstAttribute="trailing" secondItem="0MY-oo-jOz" secondAttribute="trailing" id="Fmg-A7-mGO"/>
+                            <constraint firstItem="CMB-tc-OHz" firstAttribute="leading" secondItem="0MY-oo-jOz" secondAttribute="leading" id="GfF-A6-sL7"/>
+                            <constraint firstItem="Ptz-4D-AZT" firstAttribute="trailing" secondItem="0MY-oo-jOz" secondAttribute="trailing" id="VK9-uo-QeH"/>
+                            <constraint firstItem="Ptz-4D-AZT" firstAttribute="leading" secondItem="0MY-oo-jOz" secondAttribute="leading" id="Y0g-up-0a7"/>
+                            <constraint firstItem="CMB-tc-OHz" firstAttribute="bottom" secondItem="0MY-oo-jOz" secondAttribute="bottom" id="jAN-V7-ZtN"/>
+                            <constraint firstItem="Ptz-4D-AZT" firstAttribute="top" secondItem="l5U-3T-CTT" secondAttribute="centerY" id="sd9-HU-rVP"/>
+                            <constraint firstItem="CMB-tc-OHz" firstAttribute="top" secondItem="l5U-3T-CTT" secondAttribute="top" id="wLS-iw-qIw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0MY-oo-jOz"/>
                     </view>
                     <connections>
+                        <outlet property="castLabel" destination="M4l-ck-L4x" id="Lyj-X3-h9g"/>
+                        <outlet property="countriesLabel" destination="Y0B-ao-cCu" id="pgT-Bb-4ia"/>
+                        <outlet property="directorLabel" destination="xug-0p-Os8" id="IPU-Yw-GRp"/>
+                        <outlet property="genresLabel" destination="3wk-CD-Cfz" id="dND-a4-boe"/>
+                        <outlet property="movieNameLabel" destination="HEU-rO-ayD" id="6Rv-Uf-eSj"/>
+                        <outlet property="pubdateLabel" destination="cAG-ry-Jgh" id="3PE-RR-ZgT"/>
                         <outlet property="tableView" destination="CMB-tc-OHz" id="rbT-S7-Hob"/>
+                        <outlet property="topView" destination="Ptz-4D-AZT" id="YYR-a3-CNE"/>
+                        <outlet property="topViewTopConstraint" destination="sd9-HU-rVP" id="Y8i-D3-9lt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b99-AU-cKR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -38,4 +102,9 @@
             <point key="canvasLocation" x="20" y="31"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="MainColor">
+            <color red="0.16979593039999999" green="0.6279891729" blue="0.56141322849999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
